improved algorithm to match even multi-polygons with no 'easy' order. rare cases